--- a/tcc/capitulos/capitulo1.tex
+++ b/tcc/capitulos/capitulo1.tex
@@ -151,32 +151,41 @@ Após essa classificação inicial, o método executa o seguinte conjunto de reg
   
 \end{itemize}
 
-\subsection{Estatístico} 
-O método estatístico ou empírico faz uso de grandes
+\subsection{Método Estatístico} 
+O método estatístico ou empírico utiliza-se de grandes
 quantidades de texto como páginas da internet, procurando por padrões e
-associações a modelos, podendo ou não estarem relacionados com regras sintáticas
-ou semânticas. 
+associações a modelos, sendo que esses podem ou não estarem relacionados com
+regras sintáticas ou semânticas. Como exemplo, podemos citar a utilização de
+Modelos de Markov com o algorítmo de Viterbi. Neste, a partir de um conjunto de
+dados já classificados, ou seja, um \textit{training set} é verificada a
+possibilidade de transição entre as classes gramaticais.
+Como por exemplo, se no nosso \textit{training set}, temos 10000 substantivos que em 7000 dos casos são seguidos por um verbo:
 
-Como exemplo, podemos citar a utilização de \textit{Markov Models} com o
-algorítmo de Viterbi:
+\[ P(VB|SM) = \frac{C(SM,VB)}{C(SM)} = \frac{7000}{10000} = 0.7 \]
 
-A partir de um banco de dados é verificada a possibilidade de
-transição entre as classes gramaticais. Como por exemplo, se no nosso banco de
-dados, temos 10000 substantivos que em 7000 dos casos são seguidos por um verbo:
+Aonde que \textbf{VB} são verbos e \textbf{SM} substantivos. Portanto, a
+probabilidade de um substantivo ser seguido de um verbo
+(\textbf{(VB$\vert$SM)}) é igual a ocorrência de substantivos seguidos de verbos (\textbf{C(SM,VB)})
+dividida pela quantidade total de substantivos em nosso \textit{training set}.
 
-\[ P(VB|SM) = \frac{C(VB,SM)}{C(MD)} = \frac{7000}{10000} = 0.7 \]
-
-Também é verificada a probabilidade de cada palavra ser associada com uma
-classe. Supondo que dos 10000 substantivos, 150 são a palavra ``um'':
+Após, é verificada a probabilidade de cada palavra ser associada com uma classe.
+Supondo que dos 10000 substantivos, 150 são a palavra ``um'' classificada
+dentre artigo, substantivo e pronome, como substantivo:
 
 \[ P(um|SM) = \frac{C(SM,um)}{C(SM)} = \frac{150}{10000} = 0.015 \]
 
-Como exemplo, vamos supor os seguintes dados compilados através dos métodos
-citados anteriormente:
+Aonde que \textbf{um} é a palavra que está sendo classificada e \textbf{SM}
+são os substantivos existentes no nosso \textit{training set}. Portanto a
+probabilidade de um substantivo ser associada a palavra ``um''
+(\textbf{P(um$\vert$SM)}) é igual a quantidade da palavra ``um''
+classificada como substantivo (\textbf{C(SM,um)}) dividida pela quantidade de
+substantivos em nosso \textit{training set}.
+Como exemplo, vamos supor os seguintes dados compilados através dos dois métodos
+citados anteriormente, aonde a primeira tabela representa a probabilidade de
+transição e a segunda tabela representa a probabilidade de associação:
 
 \begin{table}[htb]
 \centering
-\label{my-label}
 \begin{tabular}{|l|l|l|l|l|}
 \hline
             & Substantivo & Verbo & Artigo & Pronome \\ \hline
@@ -187,25 +196,29 @@ Artigo      & 0.1         & 0.001 & 0.030  & 0.005   \\ \hline
 Pronome     & 0.7         & 0.005 & 0.005  & 0.8     \\ \hline
 \end{tabular}
 \caption{Tabela de Probabilidade de Transição}
+\label{tabela:transicao}
 \end{table} 
 
 \begin{table}[htb]
 \centering
-\label{my-label2}
 \begin{tabular}{|l|l|l|l|l|}
 \hline
             & João & comprou & um    & carro \\ \hline
 Substantivo & 1    &         & 0.015 & 1     \\ \hline
 Verbo       &      & 1       &       &       \\ \hline
-Artigo      &      &         & 0.010 &       \\ \hline
+Artigo      &      &         & 0.030 &       \\ \hline
 Pronome     &      &         & 0.005 &       \\ \hline
 \end{tabular}
-
 \caption{Tabela de Probabilidades de Associação}
+\label{tabela:associacao}
 \end{table}
 
-Portanto, temos a seguinte imagem representando as possibilidades de
-classificação da frase de exemplo:
+
+Portanto, para a classificação da frase anterior, as palavras João, Comprou
+e Carro, só podem ser classificadas como substantivo (SM), verbo (VB) e
+substantivo (SM) respectivamente. Porém, a palavra ``um" pode ser classificada
+em substantivo (SM), artigo (ART) e pronome (PRO). A seguinte imagem representa
+as possibilidades de caminho que o classificador pode percorrer neste exemplo:
 
 \begin{figure}[htbp]
  \centering
@@ -214,8 +227,10 @@ classificação da frase de exemplo:
  \label{fig:markov}
 \end{figure}
 
-Para identificar qual a classe correta da palavra ``um'' é realizado o seguinte
-cálculo:
+\newpage
+Para a identificação da classe da palavra ``um'' é realizada a seguinte equação
+seguindo o caminho representado pela figura anterior, começando pela palavra
+João:
 
 \[ v_t(j) = v_{t-1} a_{ij} b_j(o_t) \]
 
@@ -223,17 +238,26 @@ Aonde que $v_t$ é a probabilidade do caminho atual, $v_{t-1}$ é a
 probabilidade do caminho anterior, $a_{ij}$ é a probabilidade de transição e $b_j(o_t)$ é a
 probabilidade de associação.
 
-Portanto para a palavra ``João'':
+Portanto a palavra ``João'', $v_{t-1}$ é representada pelo valor 1, visto
+que essa é a primeira palavra e não existe probabilidade de caminho
+anterior, $a_{ij}$ é a probabilidade de transição entre ``Início'' e um
+substantivo, disponível na tabela \ref{tabela:transicao} e $b_j(o_t)$ é
+a probabilidade de associação da palavra João com substantivo, disponível na
+tabela \ref{tabela:associacao}:
 
-\[ v_t(j) = 1 * 0.3 * 1 \]
+\[ v_t(j) = 1 * 0.3 * 1 = 0.3 \]
 
-E para ``comprou'':
+Para ``comprou'', além dos valores retirados das tabelas \ref{tabela:transicao}
+e \ref{tabela:associacao}, $v_{t-1}$ é representado pelo cálculo anterior do
+caminho anterior, ou seja, 0.3:
 
-\[ v_t(j) = 0.3 * 0.2 * 1 \] 
+\[ v_t(j) = 0.3 * 0.2 * 1 = 0.06 \] 
 
 Ao efetuar o cálculo de todos os caminhos, para determinar qual a classificação
 correta de uma palavra, é escolhido o caminho que tem maior probabilidade, no
-caso apresentado, a palavra ``um'' é classificada como substantivo.
+caso apresentado, a palavra ``um'' é classificada como artigo.
+
+\newpage
 
 \begin{figure}[htbp]
  \centering
