--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -36,7 +36,24 @@ extraction and categorization",
   volume = 29,
   year = 1997
 }
-
+@inproceedings{conf/icwsm/HuttoG14,
+  added-at = {2015-05-25T00:00:00.000+0200},
+  author = {Hutto, Clayton J. and Gilbert, Eric},
+  biburl = {https://www.bibsonomy.org/bibtex/253a5741ab827539d4bc4bf836fa6dae7/dblp},
+  booktitle = {ICWSM},
+  crossref = {conf/icwsm/2014},
+  editor = {Adar, Eytan and Resnick, Paul and Choudhury, Munmun De and Hogan, Bernie and Oh, Alice H.},
+  ee = {http://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8109},
+  interhash = {e73f21d7ff21014b85f5c7b48f335a11},
+  intrahash = {53a5741ab827539d4bc4bf836fa6dae7},
+  isbn = {978-1-57735-659-2},
+  keywords = {dblp},
+  publisher = {The AAAI Press},
+  timestamp = {2016-05-10T11:39:40.000+0200},
+  title = {VADER: A Parsimonious Rule-Based Model for Sentiment Analysis of Social Media Text.},
+  url = {http://dblp.uni-trier.de/db/conf/icwsm/icwsm2014.html#HuttoG14},
+  year = 2014
+}
 @book{BirdKleinLoper09,
   abstract = {This book offers a highly accessible introduction to Natural Language Processing, the field that underpins a variety of language technologies ranging from predictive text and email filtering to automatic summarization and translation. Using NLTK, you'll learn how to write Python programs to analyze the structure and meaning of texts, drawing on techniques from the fields of linguistics and artificial intelligence.},
   added-at = {2016-12-06T16:29:36.000+0100},
