--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -91,6 +91,7 @@ Banca examinadora:\par
 \acro{NLTK}[NLTK]{\textit{Natural Language Toolkit}}
 \acro{MaxEnt}[MaxEnt]{\textit{Maximum Entropy}}
 \acro{RNTN}[RNTN]{\textit{Recursive Neural Tensor Networks}}
+\acro{VADER}[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
 \end{acronym}
 \listoffigures
 \listoftables
