--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -1,21 +1,21 @@
 \chapter{Introdução}
 \label{chap:introducao}
 A linguagem é a forma com que nós nos comunicamos, seja ela escrita ou
-falada, através de símbolos ou sons. De fato, a linguagem é a forma como
+falada. De fato, a linguagem é a forma como
 expressamos nossas idéias, sentimentos e experiências. O Processamento de
 Linguagem Natural, é o termo utilizado para descrever um software ou componente
 de hardware que tem como função analisar a linguagem escrita ou falada
 \cite{jacksonmoulinier2007}.
 
-Existem duas abordagens de Processamento de Linguagem Natural, sendo a primeira
-delas é chamada de simbólica ou racionalista e a outra de empírica. A primeira
+Existem duas abordagens de Processamento de Linguagem Natural, sendo que a
+primeira delas é chamada de simbólica ou racionalista e a outra de empírica. A primeira
 abordagem consiste em uma série de regras para a manipulação de símbolos, como as regras gramaticais que permitem identificar se uma frase está malformada ou não. A abordagem
 empírica está centrada na análise estatística da linguagem através de grandes quantidades
 de textos, como por exemplo, a utilização de modelos de Markov para reconhecer padrões
 na escrita \cite{jacksonmoulinier2007}.
 
 Existem diversos \textit{frameworks open source} que facilitam o desenvolvimento
-de \textit{software} para o Processamento de Linguagem Natural, sendo que entre
+de \textit{softwares} para o Processamento de Linguagem Natural, sendo que entre
 esses destacam-se o \textit{Stanford's Core NLP Suite} \cite{corenlp}, \textit{Natural Language
 Toolkit} \cite{nltk}, \textit{Apache OpenNLP} \cite{opennlp} e \textit{Spacy}
 \cite{spacy}.
@@ -28,8 +28,8 @@ Através deste \textit{website}, seus usuários podem criar ou se inscrever em
 comunidades, também conhecidas como \textit{subreddits}.
 Uma vez que as comunidades são criadas pelos próprios usuários, podemos encontrar
 comunidades sobre todos os assuntos, sejam notícias do mundo, comunidades
-partidárias, comunidades criadas para pessoas de uma mesma localidade ou comunidades
-de imagens engraçadas.
+partidárias, comunidades criadas para pessoas de uma mesma localidade, comunidades
+de imagens engraçadas, etc.
 
 Nestas comunidades é possível visualizar e comentar \textit{links} enviados por
 outros usuários.
@@ -43,8 +43,8 @@ tiroteio ocorrido em Paris.
 
 Neste trabalho será desenvolvido um software que permita realizar a
 análise dos comentários do \textit{website} Reddit. Mais
-especificamente esses comentários serão analisados com o objetivo de identificar padrões de sentimentos, ou seja, determinar se a
-opinião expressada com relação a um determinado tópico é neutra, positiva ou negativa.
+especificamente os comentários do Reddit serão analisados com o objetivo de
+identificar padrões de sentimentos, ou seja, determinar se a opinião expressada com relação a um determinado tópico é neutra, positiva ou negativa.
 
 \section{Objetivos do Trabalho}
 
