--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -75,7 +75,21 @@ extraction and categorization",
   year = 2009
 }
 
-
+@article{shannon48,
+  added-at = {2014-12-07T16:22:02.000+0100},
+  author = {Shannon, C. E and Weaver, W.},
+  biburl = {https://www.bibsonomy.org/bibtex/22271fd5707cbd58e7973a6851e8684b3/prlz77},
+  interhash = {99ce2edb693f10e533afb85b984280b9},
+  intrahash = {2271fd5707cbd58e7973a6851e8684b3},
+  journal = {The Bell System Technical Journal},
+  keywords = {communication entropy information mathematical mutual theory},
+  month = {July, October},
+  pages = {379-423,623-656},
+  timestamp = {2014-12-07T16:22:02.000+0100},
+  title = {A Mathematical Theory of Communication},
+  volume = 27,
+  year = 1948
+}
 @article{Shannon:2001:MTC:584091.584093,
  author = {Shannon, C. E.},
  title = {A Mathematical Theory of Communication},
