--- a/tcc/capitulos/capitulo1.tex
+++ b/tcc/capitulos/capitulo1.tex
@@ -57,28 +57,30 @@ mudam essas regras para satisfazerem suas necessidades de comunicação
 
 \section{Métodos de Processamento de Linguagem Natural}
 
-O \ac{NLP} tem como o objetivo a execução de diversas tarefas como categorização
-de documentos, tradução e geração de textos a partir de um banco de dados de
-computador, etc. Podemos destacar duas formas ou métodos para a execução dessas
-tarefas, o método simbólico e o método estatístico, com origem o campo da linguística. 
+O \ac{NLP} tem como objetivo a execução de diferentes tarefas, como por exemplo,
+a categorização de documentos, a tradução e a geração de textos a partir de um
+banco de dados, etc. Podemos citar dois tipos de métodos para a execução dessas
+tarefas, que são o método simbólico e o método estatístico.
 
-Nos final dos anos 50 e 60, existiam excelentes métodos quantitativos
-desenvolvidos durante a segunda guerra mundial para a solução de problemas
+Nos final dos anos 50 e 60, existiam excelentes métodos quantitativos, que foram
+desenvolvidos durante a segunda guerra mundial, para a solução de problemas
 científicos \cite{shannon48}.
-Porém, no ano de 1957, Chomsky publicou o seu trabalho ``Syntactic Structures''
-e com isso, temos a primeira aparição da teoria de gramática gerativa, que
-considera a gramática como um conjunto de regras. Essa abordagem através de um
-conjunto de regras ao invés de um modelo matemático entra em conflito com os
+Porém, no ano de 1957, Chomsky publicou o trabalho intitulado de
+\textit{``Syntactic Structures''} e com isso, temos a primeira aparição da
+teoria de gramática gerativa, que considera a gramática como um conjunto de regras. Essa abordagem através de um
+conjunto de regras, ao invés de um modelo matemático, entra em conflito com os
 trabalhos anteriores, criando duas comunidades no campo de Linguística. Como
 reflexo das duas comunidades, a área de \ac{NLP} que crescia em paralelo a
-linguística também foi dividida em duas, uma área que fazia uso de métodos que
-utilizavam regras(simbólico) e uma outra área que fazia uso de métodos
-quantitativos(estatísticos).
+linguística também foi dividida em duas áreas. A primeira que fazia uso de
+métodos baseados em regras (simbólico) e a segunda que fazia uso de métodos
+quantitativos (estatísticos).
 
 
-Essa seção tem como objetivo explicar os dois métodos principais de
-abordagem e demonstrar as diferenças entre os dois métodos através de um exemplo
-de desambiguação de categoria de palavras.
+Esta seção serão apresentados um método simbólico e um método estatístico.
+Destaca-se que essa descrição apresenta como objetivo diferenciar ambos os
+métodos, através de seus requisitos e forma de execução. Métodos 
+utilizados na análise de sentimentos serão descritos no capítulo
+\ref{cap:Classificadores}.
 
 
 \subsection{Método Simbólico} 
@@ -184,34 +186,34 @@ regras sintáticas ou semânticas.
 
 O método estatístico para o aprendizado de máquina é considerado um
 aprendizado supervisionado. Em um aprendizado supervisionado, a classificação é
-feita a partir de um conjunto de dados já classificado corretamente,
-também chamado de \textit{training set}. Esse conjunto de dados é normalmente
-classificado por pessoas especialistas e após essa classificação inicial, esse
-conjunto de dados é generalizado através do classificador para que possa ser
-aplicado a qualquer entrada.
+feita a partir de um conjunto de dados já classificado, que é chamado de
+\textit{training set}, um exemplo de método estatístico é a utilização de
+Modelos de Markov com a aplicação do algoritmo de Viterbi.
 
-Como exemplo, a classificação da frase ``João comprou um
-carro" utilizando Modelos de Markov com o algoritmo de
-Viterbi será feita da seguinte forma:
+Neste, a classificação da frase ``João comprou um
+carro" é feita a partir de um \textit{training set} que pode, por exemplo, ser
+composto de textos retirados de \textit{web-sites}, com a classe gramatical das palavras já identificada.
 
-Primeiramente é
-necessário um \textit{training set}. Como a aquisição de um \textit{training
-set} se faz trabalhosa, neste exemplo será utilizado um \textit{training set} hipotético composto de textos retirados de \textit{web-sites}, com a classe gramatical das palavras já
-identificada.
+As palavras ``João'', ``comprou'' e ``carro''
+possuem somente uma classe gramátical, sendo essa substantivo, verbo e substantivo,
+respectivamente. Já a palavra ``um'' pode ser classificada em artigo (ART),
+substantivo (SM) e pronome (PRO). A seguinte imagem representa
+as possibilidades de caminho que o classificador pode percorrer neste exemplo:
 
-Ao efetuarmos a classificação de um texto, o algoritmo
-classificador irá utilizar o \textit{training set} para inferir a classificação
-das palavras da seguinte forma:
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[height=180px]{imagens/markov.png}
+ \caption{Caminhos possíveis de classificação}
+ \label{fig:markov}
+\end{figure}
 
-É calculada a probabilidade de cada palavra pertencer a uma classe através da
-seguinte equação:
+Sendo assim, o algoritmo classificador irá utilizar o \textit{training set} para
+inferir essa classificação, por exemplo, se o \textit{training set} tiver 10000 substantivos,
+aonde que, 150 são a palavra ``um'' classificada como substantivo, ele irá
+calcular a probabilidade da palavra ``um'' pertencer a uma determinada classe
+através de:
 
 \[ P(palavra|classe) = \frac{C(classe,palavra)}{C(classe)} \]
-
-Como as palavras ``João'', ``comprou'' e ``carro'' possuem somente uma classe
-gramátical, será utilizada a palavra ``um'' como exemplo. Supondo que no nosso
-\textit{training set} hipotético ele contém 10000 substantivos, que desses, 150
-são a palavra ``um'' classificada dentre artigo, substantivo e pronome, como substantivo:
 
 \[ P(um|SM) = \frac{C(SM,um)}{C(SM)} = \frac{150}{10000} = 0.015 \]
 
@@ -222,7 +224,30 @@ probabilidade de um substantivo ser associada a palavra ``um''
 classificada como substantivo (\textbf{C(SM,um)}) dividida pela quantidade de
 substantivos em nosso \textit{training set}.
 
-Para as demais palavras, serão considerados os seguintes valores:
+% Para as demais palavras, serão considerados os seguintes valores:
+% 
+
+
+Além da probabilidade de associação a uma determinada classe, é calculada a
+probabilidade de transição de uma classe para a outra. Supondo que no nosso
+\textit{training set} hipotético, dos 10000 substantivos, 7000 são seguidos por
+uma outra palavra classificada como verbo, essa probabilidade será calculada
+através de:
+
+\[ P(transicao|classe) = \frac{C(classe,transicao)}{C(classe)} \]
+
+\[ P(VB|SM) = \frac{C(SM,VB)}{C(SM)} = \frac{7000}{10000} = 0.7 \]
+
+Onde \textbf{VB} são verbos e \textbf{SM} substantivos. Como pode ser observado
+na equação, a probabilidade de um substantivo ser seguido de um verbo
+(\textbf{(VB$\vert$SM)}) é igual a ocorrência de substantivos seguidos de verbos (\textbf{C(SM,VB)})
+dividida pela quantidade total de substantivos em nosso \textit{training set}.
+
+A probabilidade de associação é cálculada para todas as classes e também
+para todas as palavras que estão sendo classificadas, assim como a
+probabilidade de transição é calculada para todas as classes. Neste, serão
+considerados os seguintes valores calculados a partir do nosso \textit{training
+set} de exemplo:
 
 \begin{table}[htb]
 \centering
@@ -237,24 +262,6 @@ Pronome     & 0    & 0       & 0.005 & 0     \\ \hline
 \caption{Tabela de Probabilidades de Associação}
 \label{tabela:associacao}
 \end{table}
-
-Também, é calculada a probabilidade de transição de uma classe para a outra
-através da seguinte equação:
-
-\[ P(transicao|classe) = \frac{C(classe,transicao)}{C(classe)} \]
-
-Supondo que no nosso
-\textit{training set} hipotético, dos 10000 substantivos, 7000 são seguidos por
-uma outra palavra classificada como verbo:
-
-\[ P(VB|SM) = \frac{C(SM,VB)}{C(SM)} = \frac{7000}{10000} = 0.7 \]
-
-Onde \textbf{VB} são verbos e \textbf{SM} substantivos. Como pode ser observado
-na equação, a probabilidade de um substantivo ser seguido de um verbo
-(\textbf{(VB$\vert$SM)}) é igual a ocorrência de substantivos seguidos de verbos (\textbf{C(SM,VB)})
-dividida pela quantidade total de substantivos em nosso \textit{training set}.
-
-Para as demais transições, serão considerados os seguintes valores:
 
 \begin{table}[htb]
 \centering
@@ -271,25 +278,10 @@ Pronome     & 0.7         & 0.005 & 0.005  & 0.8     \\ \hline
 \label{tabela:transicao}
 \end{table} 
 
-Aonde que Substantivo, Verbo, Artigo e Pronome são classes gramaticais e Início
-indica a primeira palavra de uma frase, aonde não existe uma palavra anterior
-para fazer a transição.
-
-Como a palavra ``um" pode ser classificada
-em substantivo (SM), artigo (ART) e pronome (PRO). A seguinte imagem representa
-as possibilidades de caminho que o classificador pode percorrer neste exemplo:
-
-\begin{figure}[htbp]
- \centering
- \includegraphics[height=180px]{imagens/markov.png}
- \caption{Caminhos possíveis de classificação}
- \label{fig:markov}
-\end{figure}
-
-\newpage
-Para a identificação da classe da palavra ``um'' é realizada a seguinte equação
-seguindo o caminho representado pela figura anterior, começando pela palavra
-João:
+Para identificação do caminho correto de classificação (Figura \ref{fig:markov})
+e portanto a classe gramatical da palavra ``um'', é utilizado o algoritmo de Viterbi, o qual tem o
+objetivo de encontrar a sequência de eventos com mais probabilidade de ocorrer.
+Começando pelo início da frase, essa sequência é calculada através de:
 
 \[ v_t(j) = v_{t-1} a_{ij} b_j(o_t) \]
 
@@ -348,7 +340,7 @@ problema.
 % estatísticos qual o significado correto para cada frase
 % \cite{jacksonmoulinier2007}.
 
-\section{Métodos estatísticos e simbólicos aplicados na análise de sentimentos}
+\chapter{Métodos estatísticos e simbólicos aplicados na análise de sentimentos}
 \label{cap:Classificadores}
 
 %Para o \ac{NLP} e também para o campo de estatísticas, classificadores são
@@ -356,7 +348,7 @@ problema.
 %classificação é feita a partir de dados já classificados corretamente, ou seja,
 %um \textit{training set}.
 
-\subsection{Naive Bayes}
+\section{Naive Bayes}
 
 O classificador Naive Bayes é um classificador baseado no teorema de Bayes com
 independencia entre seus atributos.
@@ -453,7 +445,7 @@ performance é considerada incrívelmente boa até mesmo para casos aonde temos 
 atributos \cite{domingos97naivebayes}.
 
 %TODO EXEMPLO
-\subsection{\textit{Maximum Entropy}}
+\section{\textit{Maximum Entropy}}
 O classificador \ac{MaxEnt} tem como
 característica principal a preferência por modelos de dados uniformes sem efetuar nenhuma suposição injustificada.
 
@@ -543,7 +535,7 @@ distribuição que máximiza a entropia, ou seja, a mais uniforme.
 
 
 
-\subsection{\textit{VADER}}
+\section{\textit{VADER}}
 
 O \ac{VADER} é um dicionário e classificador de sentimentos que se baseia em
 regras, portanto, um método de classificação simbólico. Ele é especialmente
